@@ -1,7 +1,7 @@
 ---
- Makefile     |   12 ++++++++++--
+ Makefile     |    3 ++-
  lib/Makefile |   11 +++++++----
- 2 files changed, 17 insertions(+), 6 deletions(-)
+ 2 files changed, 9 insertions(+), 5 deletions(-)
 
 --- a/Makefile
 +++ b/Makefile
@@ -14,29 +14,7 @@
  CFLAGS=$(OPT) -Wall -W -Wno-parentheses -Wstrict-prototypes -Wmissing-prototypes
  
  VERSION=3.5.2
-@@ -59,7 +59,7 @@ PCIINC_INS=lib/config.h lib/header.h lib
- 
- export
- 
--all: lib/$(PCILIB) lspci setpci example lspci.8 setpci.8 pcilib.7 update-pciids update-pciids.8 $(PCI_IDS)
-+all: lib/$(PCILIB) lspci lspci-udeb setpci example lspci.8 setpci.8 pcilib.7 update-pciids update-pciids.8 $(PCI_IDS)
- 
- lib/$(PCILIB): $(PCIINC) force
- 	$(MAKE) -C lib all
-@@ -70,6 +70,7 @@ lib/config.h lib/config.mk:
- 	cd lib && ./configure
- 
- lspci: lspci.o ls-vpd.o ls-caps.o ls-caps-vendor.o ls-ecaps.o ls-kernel.o ls-tree.o ls-map.o common.o lib/$(PCILIB)
-+lspci-udeb: lspci.o ls-vpd.o ls-caps.o ls-caps-vendor.o ls-ecaps.o ls-kernel.o ls-tree.o ls-map.o common.o lib/libpci.a
- setpci: setpci.o common.o lib/$(PCILIB)
- 
- LSPCIINC=lspci.h pciutils.h $(PCIINC)
-@@ -85,10 +86,12 @@ setpci.o: setpci.c pciutils.h $(PCIINC)
- common.o: common.c pciutils.h $(PCIINC)
- 
- lspci: LDLIBS+=$(LIBKMOD_LIBS)
-+lspci-udeb: LDLIBS+=$(LIBKMOD_LIBS)
- ls-kernel.o: CFLAGS+=$(LIBKMOD_CFLAGS)
+@@ -89,6 +89,7 @@ ls-kernel.o: CFLAGS+=$(LIBKMOD_CFLAGS)
  
  update-pciids: update-pciids.sh
  	sed <$< >$@ "s@^DEST=.*@DEST=$(IDSDIR)/$(PCI_IDS)@;s@^PCI_COMPRESSED_IDS=.*@PCI_COMPRESSED_IDS=$(PCI_COMPRESSED_IDS)@"
@@ -44,32 +22,6 @@
  	chmod +x $@
  
  # The example of use of libpci
-@@ -98,6 +101,9 @@ example.o: example.c $(PCIINC)
- %: %.o
- 	$(CC) $(LDFLAGS) $(TARGET_ARCH) $^ $(LDLIBS) -o $@
- 
-+lspci-udeb: lspci.o
-+	$(CC) $(LDFLAGS) $(TARGET_ARCH) $^ $(LDLIBS) $(WITH_LIBS) -o $@
-+
- %.8 %.7: %.man
- 	M=`echo $(DATE) | sed 's/-01-/-January-/;s/-02-/-February-/;s/-03-/-March-/;s/-04-/-April-/;s/-05-/-May-/;s/-06-/-June-/;s/-07-/-July-/;s/-08-/-August-/;s/-09-/-September-/;s/-10-/-October-/;s/-11-/-November-/;s/-12-/-December-/;s/\(.*\)-\(.*\)-\(.*\)/\3 \2 \1/'` ; sed <$< >$@ "s/@TODAY@/$$M/;s/@VERSION@/pciutils-$(VERSION)/;s#@IDSDIR@#$(IDSDIR)#"
- 
-@@ -112,6 +118,7 @@ install: all
- # -c is ignored on Linux, but required on FreeBSD
- 	$(DIRINSTALL) -m 755 $(DESTDIR)$(SBINDIR) $(DESTDIR)$(IDSDIR) $(DESTDIR)$(MANDIR)/man8 $(DESTDIR)$(MANDIR)/man7
- 	$(INSTALL) -c -m 755 $(STRIP) lspci setpci $(DESTDIR)$(SBINDIR)
-+	$(INSTALL) -c -m 755 $(STRIP) lspci-udeb $(DESTDIR)-udeb$(SBINDIR)/lspci
- 	$(INSTALL) -c -m 755 update-pciids $(DESTDIR)$(SBINDIR)
- 	$(INSTALL) -c -m 644 $(PCI_IDS) $(DESTDIR)$(IDSDIR)
- 	$(INSTALL) -c -m 644 lspci.8 setpci.8 update-pciids.8 $(DESTDIR)$(MANDIR)/man8
-@@ -146,6 +153,7 @@ endif
- 
- uninstall: all
- 	rm -f $(DESTDIR)$(SBINDIR)/lspci $(DESTDIR)$(SBINDIR)/setpci $(DESTDIR)$(SBINDIR)/update-pciids
-+	rm -f $(DESTDIR)-udeb$(SBINDIR)/lspci
- 	rm -f $(DESTDIR)$(IDSDIR)/$(PCI_IDS)
- 	rm -f $(DESTDIR)$(MANDIR)/man8/lspci.8 $(DESTDIR)$(MANDIR)/man8/setpci.8 $(DESTDIR)$(MANDIR)/man8/update-pciids.8
- 	rm -f $(DESTDIR)$(MANDIR)/man7/pcilib.7
 --- a/lib/Makefile
 +++ b/lib/Makefile
 @@ -47,13 +47,16 @@ OBJS += darwin
